--- a/WindowsFormsApp1/App.config
+++ b/WindowsFormsApp1/App.config
@@ -3,5 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+  <connectionStrings>
+    <add name="cnx"
+         connectionString="DATA SOURCE =XE; PASSWORD=abcd1234; USER ID =SIGLOXXI "/>
+  </connectionStrings>
 	
 </configuration>
