buscar provedor mejorado

--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -60,6 +60,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmListaProvedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListaProvedor.Designer.cs">
+      <DependentUpon>frmListaProvedor.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmListarInsumos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmListaProvedor.resx">
+      <DependentUpon>frmListaProvedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmListarInsumos.resx">
       <DependentUpon>FrmListarInsumos.cs</DependentUpon>
