--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -72,6 +72,12 @@
     <Compile Include="FrmListarInsumos.Designer.cs">
       <DependentUpon>FrmListarInsumos.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmListarLocal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListarLocal.Designer.cs">
+      <DependentUpon>frmListarLocal.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmListarMerma.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmListarInsumos.resx">
       <DependentUpon>FrmListarInsumos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmListarLocal.resx">
+      <DependentUpon>frmListarLocal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmListarMerma.resx">
       <DependentUpon>FrmListarMerma.cs</DependentUpon>
